# WorkSafe-Freelancer-Milestone-Payment-Protection-Platform

./: .gitignore  FEEDBACK_SUMMARY.md  README.md
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  fix.js  package-lock.json  package.json  tsconfig.json
backend/src/: server.ts
backend/src/config/: db.ts  sentry.ts
backend/src/controllers/: adminController.ts  authController.ts  disputeController.ts  feedbackController.ts  milestoneController.ts  projectController.ts  userController.ts
backend/src/middleware/: auth.ts  errorHandler.ts
backend/src/models/: Dispute.ts  Feedback.ts  Milestone.ts  Project.ts  User.ts
backend/src/routes/: adminRoutes.ts  disputeRoutes.ts  milestoneRoutes.ts  projectRoutes.ts  userRoutes.ts
contracts/: Cargo.toml  deploy.sh
contracts/worksafe_escrow_contract/: Cargo.toml
contracts/worksafe_escrow_contract/src/: lib.rs  test.rs
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: MilestoneTimeline.tsx  Navbar.tsx  ProtectedRoute.tsx  Skeleton.tsx  StatusBadge.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useWalletBalance.ts
frontend/src/pages/: AdminDashboard.tsx  CreateProject.tsx  Dashboard.tsx  Disputes.tsx  FeedbackForm.tsx  Landing.tsx  Login.tsx  Profile.tsx  ProjectDetail.tsx  ProjectList.tsx  Register.tsx
frontend/src/services/: analytics.ts  api.ts  freighter.ts  soroban.ts
frontend/src/types/: index.ts
