[workspace]
resolver = "2"
members = ["worksafe_escrow_contract"]

[workspace.package]
edition = "2021"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
overflow-checks = true
